force-app/main/default/objects/License_Staging__c/License_Staging__c.object-meta.xml
<CustomObject>
    <description>License Staging:
Pubacc hd - License Header
Pubacc ll - Lease Relationship
Pubacc en - License Entity</description>
    <label>License Staging</label>
    <nameField>
        <label>License Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>