force-app/main/default/objects/License_Staging__c/fields/Applicant_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Type_Code__c</fullName>
    <label>Applicant Type Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>