force-app/main/default/objects/License_Staging__c/fields/Applicant_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Type_Other__c</fullName>
    <label>Applicant Type Other</label>
    <length>40</length>
    <type>Text</type>
</CustomField>