force-app/main/default/objects/License_Staging__c/fields/Associated_Frequencies__c.field-meta.xml
<CustomField>
    <fullName>Associated_Frequencies__c</fullName>
    <description>This field is used to capture the string of Associated frequencies from Cantino for 2.5 Project</description>
    <label>Associated Frequencies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>