force-app/main/default/objects/License_Staging__c/fields/Call_Sign__c.field-meta.xml
<CustomField>
    <fullName>Call_Sign__c</fullName>
    <label>Call Sign</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>