force-app/main/default/objects/License_Staging__c/fields/External_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>External_Unique_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>External Unique Identifier</label>
    <length>225</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>