force-app/main/default/objects/License_Staging__c/fields/Frn__c.field-meta.xml
<CustomField>
    <fullName>Frn__c</fullName>
    <label>Frn</label>
    <length>10</length>
    <type>Text</type>
</CustomField>