force-app/main/default/objects/License_Staging__c/fields/Is_Ntm__c.field-meta.xml
<CustomField>
    <fullName>Is_Ntm__c</fullName>
    <description>A true means the record is own by New T-Mobile (includes Sprint)</description>
    <inlineHelpText>NTM means New T-Mobile</inlineHelpText>
    <label>Is_Ntm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>