force-app/main/default/objects/License_Staging__c/fields/Lease_Classification__c.field-meta.xml
<CustomField>
    <fullName>Lease_Classification__c</fullName>
    <description>--ML Spectrum Manager Lease; TL De Facto Transfer Lease</description>
    <inlineHelpText>--ML Spectrum Manager Lease; TL De Facto Transfer Lease</inlineHelpText>
    <label>Lease_Classification</label>
    <type>TextArea</type>
</CustomField>