force-app/main/default/objects/License_Staging__c/fields/Lease_Term__c.field-meta.xml
<CustomField>
    <fullName>Lease_Term__c</fullName>
    <description>--L Long; S Short</description>
    <inlineHelpText>--L Long; S Short</inlineHelpText>
    <label>Lease_Term</label>
    <type>TextArea</type>
</CustomField>