force-app/main/default/objects/License_Staging__c/fields/License_Status__c.field-meta.xml
<CustomField>
    <fullName>License_Status__c</fullName>
    <label>License Status</label>
    <length>2</length>
    <type>Text</type>
</CustomField>