force-app/main/default/objects/License_Staging__c/fields/Parent_Call_Sign__c.field-meta.xml
<CustomField>
    <fullName>Parent_Call_Sign__c</fullName>
    <label>Parent Call Sign</label>
    <length>225</length>
    <type>Text</type>
</CustomField>