force-app/main/default/objects/License_Staging__c/fields/Radio_Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Radio_Service_Code__c</fullName>
    <label>Radio Service Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>