force-app/main/default/objects/License_Staging__c/fields/Unique_System_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_System_Identifier__c</fullName>
    <label>Unique System Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>